--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -320,7 +320,7 @@ h3, h4 { font-style: bold; }
 #context-menu a:hover { border-color:gray; background-color:#eee; color:#005B00; }
 /* selected element */
 tr.context-menu-selection { background-color:#144B00 !important; color:#f8f8f8 !important; }
-.context-menu-selection a, .context-menu-selection a:hover { color:#f8f8f8 !important; }
+.context-menu-selection a, .context-menu-selection a:hover { background-color:#144B00 !important; color:#f8f8f8 !important; }
 tr.context-menu-selection:hover { background-color:#144B00 !important; color:#f8f8f8  !important; }
 
 /* History area */
